--- a/index.css
+++ b/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.product-cont{
+    display: flex;
+    flex-direction: row;
+    
+    justify-content:space-around;
+    width:70vw;
+    margin: auto;
+    margin-top: 100px;
+   
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.description{
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+}
+.product-image1{
+    height:400px;
+    width:400px;
 }
